--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         "quotes": "off",
         "linebreak-style":"off",
         "require-jsdoc":"off",
-        "eol-last":"off"
+        "eol-last":"off",
+        "comma-dangle":"off"
     }
 }
