--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/Maksim2305/excel-course/issues"
   },
-  "homepage": "https://github.com/Maksim2305/excel-course#readme",
+  "homepage": "https://github.com/Maksim2305/excel-course",
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.19.6",
