--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "repository": {
@@ -23,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/Maksim2305/excel-course/issues"
   },
-  "homepage": "https://github.com/Maksim2305/excel-course",
+  "homepage": "https://maksim2305.github.io/excel-course",
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.19.6",
